--- a/analysis/PCAWG_sig_pathway_interactions.Rmd
+++ b/analysis/PCAWG_sig_pathway_interactions.Rmd
@@ -6,6 +6,9 @@ output:
 ---
 
 ```{r}
+rm(list = ls())
+.rs.restartR()
+
 knitr::opts_chunk$set(comment = '', fig.width = 6, 
                       fig.height = 6, echo = FALSE, 
                       warning = FALSE)
@@ -140,25 +143,25 @@ abundant.tissues = which(PCAWG.full.subset.ann.pathways$Cancer.Types %>%
 
 #### Interactions between all pathways and signatures
 
-```{r}
-all.path.sig.assocs = get_sig_path_assocs(
-    PCAWG.full.subset.ann.pathways %>% dplyr::select(4:ncol(.)),
-    PCAWG.pathways.tissues %>% dplyr::select(4:ncol(.)),
-    p.val.threshold = 0.05)
+<!-- ```{r} -->
+<!-- all.path.sig.assocs = get_sig_path_assocs( -->
+<!--     PCAWG.full.subset.ann.pathways %>% dplyr::select(4:ncol(.)), -->
+<!--     PCAWG.pathways.tissues %>% dplyr::select(4:ncol(.)), -->
+<!--     p.val.threshold = 0.05) -->
 
-all.path.sig.heatmap = myggheatmap(
-    dataMatrix = rm_zeros(all.path.sig.assocs), 
-    points = T, revColors = F, revRow = T, 
-    scaleName = "log(OR)",
-    colorPalette = "RdBu",
-    limits = c(-5, 5))
+<!-- all.path.sig.heatmap = myggheatmap( -->
+<!--     dataMatrix = rm_zeros(all.path.sig.assocs),  -->
+<!--     points = T, revColors = F, revRow = T,  -->
+<!--     scaleName = "log(OR)", -->
+<!--     colorPalette = "RdBu", -->
+<!--     limits = c(-5, 5)) -->
 
-all.path.sig.heatmap
+<!-- all.path.sig.heatmap -->
 
-ggsave(plot = all.path.sig.heatmap,
-       file = file.path(fig.dir, "PCAWG.all.path.sig.heatmap.png"),
-       width = 5, height = 6)
-```
+<!-- ggsave(plot = all.path.sig.heatmap, -->
+<!--        file = file.path(fig.dir, "PCAWG.all.path.sig.heatmap.png"), -->
+<!--        width = 5, height = 6) -->
+<!-- ``` -->
 
 ### Creating a signature-pathway matrix for GES in octave
 
@@ -276,9 +279,6 @@ for (tissue in names(tissue.odds.ratio.unadjusted)) {
                     PTS = tissue.lm.coefs.mats.log[[tissue]])
     PCAWG.sig.path.interactions[[tissue]] = int.list
 }
-
-
-
 ```
 
 ### Filter the interactions based on the null distributions
@@ -292,7 +292,11 @@ metric.name.mapping = list(OP = "Fisher's exact test",
                            PTS = "lm(signature ~ pathway)")
 
 out.file = here("supp_data", "PCAWG.sig.pathway.significant.interactions.xlsx")
-file.remove(out.file)
+
+if (file.exists(out.file)) {
+    file.remove(out.file)
+}
+
 for(tissue in names(PCAWG.sig.path.interactions)) {
     
     for (metric.name in names(PCAWG.sig.path.interactions[[tissue]])) {
@@ -315,9 +319,10 @@ for(tissue in names(PCAWG.sig.path.interactions)) {
             sig = rownames(metric.values)[non.zero.values[i, 1]]
             path = colnames(metric.values)[non.zero.values[i, 2]]
             
-            p.values[sig, path] = min(percentile(PCAWG.sig.path.nulls[[tissue]][[metric.name]][sig, path, ] ,
+            p.values[sig, path] = min(
+                percentile(PCAWG.sig.path.nulls[[tissue]][[metric.name]][gsub(" ", ".", sig), path, ] ,
                                                   metric.values[sig, path]),
-                                      1 - percentile(PCAWG.sig.path.nulls[[tissue]][[metric.name]][sig, path, ] ,
+                1 - percentile(PCAWG.sig.path.nulls[[tissue]][[metric.name]][gsub(" ", ".", sig), path, ] ,
                                                   metric.values[sig, path]))
             
             if(p.values[sig, path] > sig.threshold) {
@@ -404,42 +409,43 @@ saveRDS(PCAWG.sig.path.interactions.significant, here("data/RDS/PCAWG/10_onco_pa
 ```{r}
 pp.OR = plot_all_counts(lapply(PCAWG.sig.path.interactions.significant, function(x) x$OR), 
                                               threshold = 0.1, psize = 5,
-                                              expand.mult = c(0.13, 0.13))
+                                              expand.mult = c(0.07, 0.07)) + 
+    theme(axis.text = element_text(family = "Arial"))
 
 ggsave(plot = pp.OR,
                filename = file.path(fig.dir, "pathway_to_signature", "by_tissues", "oddsratio",
                                     "PCAWG_summarized_sig_pathway_OR_null_adjusted.pdf"),
-               height = 2.4, width = 3.4, bg = "white", device = cairo_pdf, family = "DejaVu Sans")
-
-
+               height = 2.4, width = 3.4, bg = "white", device = cairo_pdf)
 
 
 
 pp.STP = plot_all_counts(lapply(PCAWG.sig.path.interactions.significant, function(x) x$STP), 
                                               threshold = 0.1, psize = 5,
-                                              expand.mult = c(0.13, 0.13))
+                                              expand.mult = c(0.03, 0.03)) + 
+    theme(axis.text = element_text(family = "Arial"))
 
 ggsave(plot = pp.STP,
                filename = file.path(fig.dir, "signature_to_pathway",
                                     "by_tissues", "log_log",
                                     "PCAWG_logged_glm_null_adjusted_summarized.pdf"),
-               height = 1.15, width = 1.6, bg = "white")
+               height = 1.15, width = 1.6, bg = "white", device = cairo_pdf)
 
 
 
 
 pp.PTS = plot_all_counts(lapply(PCAWG.sig.path.interactions.significant, function(x) x$PTS), 
                                               threshold = 0.1, psize = 5,
-                                              expand.mult = c(0.13, 0.13))
+                                              expand.mult = c(0.03, 0.03)) + 
+    theme(axis.text = element_text(family = "Arial"))
 
 ggsave(plot = pp.PTS,
                filename = file.path(fig.dir, "pathway_to_signature",
                                     "by_tissues", "lm_log", "PCAWG_logged_summarized_OLS_path_to_sigs.pdf"),
-               height = 2.7, width = 4.4, bg = "white", device = cairo_pdf, family = "DejaVu Sans")
+               height = 2.7, width = 4.4, bg = "white", device = cairo_pdf)
 ```
 
 
-### Bipartite graph - not used 
+### Bipartite graph - not used in the paper
 
 ```{r}
 sig.path.oddsratio.bipartite = minor_plot(plot_bipartite2(
@@ -448,8 +454,8 @@ sig.path.oddsratio.bipartite = minor_plot(plot_bipartite2(
 
 ggsave(plot = sig.path.oddsratio.bipartite,
        filename = file.path(fig.dir, "pathway_to_signature", "by_tissues", "oddsratio",
-                                    "PCAWG_summarized_sig_pathway_unadjusted.bipartite.pdf"),
-       height = 5, width = 5.5, bg = "white", device = cairo_pdf, family = "DejaVu Sans")
+                                    "PCAWG_summarized_sig_pathway_adjusted.bipartite.pdf"),
+       height = 5, width = 5.5, bg = "white", device = cairo_pdf, family = "Arial")
 ```
 
 ### Tissues of Odds ratio interactions
@@ -476,7 +482,7 @@ for (tissue in names(tissue.odds.ratio.null.adjusted)) {
    
     if (any(abs(tissue.odds.ratio.null.adjusted[[tissue]]) > 0) ) {
         cat(tissue, "\n")
-        int.heatmap = ggheatmap_wrapper(tissue.odds.ratio.adjusted[[tissue]], 
+        int.heatmap = ggheatmap_wrapper(tissue.odds.ratio.null.adjusted[[tissue]], 
                                         title = tissue)
         
         print(int.heatmap)
@@ -596,7 +602,6 @@ rev.uv.rtkras = skin.concat %>%
     mutate (`RTK RAS` = factor(`RTK RAS`, levels = c(0, 1,2,3))) %>%
     ggplot(aes(x = UV, y = `RTK RAS`) ) +
     geom_jitter(width = 0.1, height = 0.15) +
-    theme_bw(base_size = 13) +
     xlab("log(UV)")
 
 ggsave(filename = file.path(fig.dir, paste0(tissue, "rev_uv_rtkras_relationship.png")),
@@ -635,34 +640,33 @@ ggsave(filename = file.path(fig.dir, paste0(tissue, "rev_uv_rtkras_relationship.
 
 ### Three summaries together
 
+<!-- ```{r} -->
+<!-- pp.PCAWG.combined.summaries = ggarrange(pp.OR + ggtitle("Co-occurrence"),  -->
+<!--           pp.PTS + ggtitle("lm(signature ~ pathway)"),  -->
+<!--           pp.STP + ggtitle("glm(pathway ~ signature)"),  -->
+<!--           # widths = c(0.5, 0.7, 12), -->
+<!--           heights = c(1, 0.9, 1), -->
+<!--           nrow = 3) -->
+
+<!-- pp.PCAWG.combined.summaries = annotate_figure( -->
+<!--     pp.PCAWG.combined.summaries, top = text_grob("PCAWG signature-pathway analysis summaries",  -->
+<!--                color = "black", face = "bold", size = 11)) -->
+
+<!-- ggsave(plot = pp.PCAWG.combined.summaries, -->
+<!--                filename = file.path(fig.dir, "PCAWG_combined_summaries_sig_pathway.pdf"), -->
+<!--                height = 10, width = 4, bg = "white", device = cairo_pdf, family = "DejaVu Sans") -->
+<!-- ``` -->
+
+
 ```{r}
-pp.PCAWG.combined.summaries = ggarrange(pp.OR + ggtitle("Co-occurrence"), 
-          pp.PTS + ggtitle("lm(signature ~ pathway)"), 
-          pp.STP + ggtitle("glm(pathway ~ signature)"), 
-          # widths = c(0.5, 0.7, 12),
-          heights = c(1, 0.9, 1),
-          nrow = 3)
-
-pp.PCAWG.combined.summaries = annotate_figure(
-    pp.PCAWG.combined.summaries, top = text_grob("PCAWG signature-pathway analysis summaries", 
-               color = "black", face = "bold", size = 11))
-
-ggsave(plot = pp.PCAWG.combined.summaries,
-               filename = file.path(fig.dir, "PCAWG_combined_summaries_sig_pathway.pdf"),
-               height = 10, width = 4, bg = "white", device = cairo_pdf, family = "DejaVu Sans")
-```
-
-
-```{r}
-
 pp.PCAWG.combined.summaries = ggdraw() +
-  draw_plot(pp.OR + ggtitle("Co-occurrence"), x = 0, y = 0.61, width = 1, height = .4) +
-  draw_plot(pp.PTS + ggtitle("lm(signature ~ pathway)"), x = 0, y = .22, width = 1, height = .4) +
-  draw_plot(pp.STP + ggtitle("glm(pathway ~ signature)"), x = 0, y = 0, width = 0.42, height = 0.22) 
+  draw_plot(pp.OR + ggtitle("Co-occurrence"), x = 0, y = 0.7, width = 0.6, height = .3) +
+  draw_plot(pp.PTS + ggtitle("lm(signature ~ pathway)"), x = 0, y = .35, width = 0.75, height = .35) +
+  draw_plot(pp.STP + ggtitle("glm(pathway ~ signature)"), x = 0, y = 0, width = 0.7, height = 0.35)
 
 ggsave(plot = pp.PCAWG.combined.summaries,
                filename = file.path(fig.dir, "PCAWG_combined_summaries_sig_pathway.pdf"),
-               height = 10, width = 4, bg = "white", device = cairo_pdf, family = "DejaVu Sans")
+               height = 10, width = 6, bg = "white", device = cairo_pdf, family = "DejaVu Sans")
 ```
 
 
@@ -715,21 +719,14 @@ ggsave(plot = skin.annotated.heatmap,
        file = file.path(fig.dir, "PCAWG.skin.annotated.heatmap.pdf"),
        width = 4.5, height = 4)
 
- int.heatmap = ggheatmap_wrapper(tissue.odds.ratio.unadjusted[[tissue]], 
+ int.heatmap = ggheatmap_wrapper(tissue.odds.ratio.adjusted[[tissue]], 
                                         title = tissue)
         
 print(int.heatmap)
 ggsave(plot = int.heatmap,
        filename = file.path(fig.dir, "pathway_to_signature", "by_tissues", "oddsratio",
-                            paste0("PCAWG_", tissue, "_sig_pathway_unadjusted.dotplot.pdf")),
+                            paste0("PCAWG_", tissue, "_sig_pathway_adjusted.dotplot.pdf")),
                height = 5, width = 6, bg = "white")
-```
-
-
-```{r}
-tissue = "Skin_Melanoma"
-tissue.heatmap = subset_tissue(PCAWG.full.subset, tissue = tissue) %>% 
-            plot_tissue_heatmap(main = tissue)
 ```
 
 ### Breast_AdenoCA pathways
