--- a/analysis/TCGA_sig_sig_survivals.Rmd
+++ b/analysis/TCGA_sig_sig_survivals.Rmd
@@ -6,7 +6,7 @@ output:
 ---
 
 ```{r}
-# .rs.restartR()
+.rs.restartR()
 rm(list = ls())
 knitr::opts_chunk$set(comment = '', fig.width = 6, 
                       fig.height = 6, echo = FALSE, 
@@ -42,12 +42,12 @@ TCGA.full.subset.ann = readRDS(file = here("data/RDS",
 TCGA.clin.df = readRDS(file = file.path(input.dir, "TCGA.clin.df.RDS") )
 
 positive.sig.sig = read.delim(file = here("supp_data", 
-                                        "TCGA_positive_interaction_tissue_summaries.tsv"),
-                              row.names = 1)
+                                        "TCGA_sig_sig_positive_interaction_tissue_summaries.tsv"),
+                              check.names = FALSE, row.names = 1)
 
 negative.sig.sig = read.delim(file = here("supp_data", 
-                                        "TCGA_negative_interaction_tissue_summaries.tsv"),
-                            row.names = 1)
+                                        "TCGA_sig_sig_negative_interaction_tissue_summaries.tsv"),
+                            check.names = FALSE, row.names = 1)
 ```
 
 
